src/main/default/objects/Quiz_Winner__c/Quiz_Winner__c.object-meta.xml
<CustomObject>
    <label>Quiz Winner</label>
    <nameField>
        <label>Quiz Winner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quiz Winners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>