src/main/default/objects/Quiz_Winner__c/fields/Player_Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Player_Unique_Identifier__c</fullName>
    <label>Player Unique Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>