src/main/default/objects/Quiz_Winner__c/fields/Quiz_Summary__c.field-meta.xml
<CustomField>
    <fullName>Quiz_Summary__c</fullName>
    <label>Quiz Summary</label>
    <referenceTo>Quiz_Summary__c</referenceTo>
    <relationshipLabel>Quiz Winners</relationshipLabel>
    <relationshipName>Quiz_Winners</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>